// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CModal renders basic wrapper correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="modal overflow-auto fade"
    data-modal={true}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-content"
      />
    </div>
  </div>
</div>
`;

exports[`CModal renders customized wrapper correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="modal overflow-auto fade modal-warning class-name d-block"
    data-modal={true}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog modal-dialog-centered modal-lg"
      role="document"
    >
      <div
        className="modal-content border-info content-class"
      >
        CModal
      </div>
    </div>
  </div>
  <div
    className="modal-backdrop fade show"
  />
</div>
`;

exports[`CModal renders modal dialog scrollable correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="modal overflow-auto fade modal-danger"
    data-modal={true}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog modal-dialog-scrollable"
      role="document"
    >
      <div
        className="modal-content"
      >
        CModal modal-dialog-scrollable
      </div>
    </div>
  </div>
</div>
`;
